--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -11,7 +11,7 @@
         & ^[0]__item
             min-width: initial
 
-            &:not(:last-child)
+            &:not(:last-of-type)
                 border-right: 0
 
         & ^[0]__link
