--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -4,6 +4,9 @@
 html, body
     height 100%
 
+.hide-when-header-fixed
+    transition(all)
+
 .hide-mob
     +below(768px)
         display: none !important
