--- a/markup/components/checkbox/checkbox.styl
+++ b/markup/components/checkbox/checkbox.styl
@@ -34,8 +34,8 @@
 
     &_black
         & ^[0]__box
-            border-color #000306
-            background-color #1E1F20
+            border-color #262728
+            background-color: rgba(255, 255, 255, .02)
 
         & ^[0]__text
             color #fff
