city-suggest added

--- a/markup/components/navbar/navbar.pug
+++ b/markup/components/navbar/navbar.pug
@@ -41,3 +41,7 @@ mixin navbar-dropdown
 mixin navbar-items
     +e.UL.items&attributes(attributes)
         block
+
+mixin navbar-popup-wrapper
+    +e.popup-wrapper&attributes(attributes)
+        block
