--- a/markup/components/accordion/accordion.styl
+++ b/markup/components/accordion/accordion.styl
@@ -27,14 +27,16 @@
         justify-content: space-between
         align-items: center
         cursor: pointer
+        -webkit-tap-highlight-color transparent
 
     &__heading
         display: block
-        font-font: fontSecond
+        font-family: fontSecond
         font-size 26px
         letter-spacing initial
         margin-right: 15px
         font-weight: 400
+        user-select none
 
     &__close
         display: flex
