--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -5,6 +5,9 @@ include ../avatar/avatar
 include ../follow-us/follow-us
 include ../photo-tape/photo-tape
 include ../city-suggest/city-suggest
+include ../accordion/accordion
+include ../button/button
+include ../city-list/city-list
 
 mixin header()
     +b.HEADER.header&attributes(attributes)
@@ -33,11 +36,29 @@ mixin header()
                 +navbar-item._flexible
                     +search-bar
 
-                +navbar-item._relative
+                +navbar-item
                     +navbar-link-dropdown(href='#')
                         +navbar-heading City
                         +navbar-description Los Angeles
-                    +city-suggest.__suggest
+                    +navbar-popup-wrapper
+                        +city-suggest.__suggest
+                    +navbar-dropdown
+                        +accordion(true).accordion_dark
+                            +accordion-item('United States')
+                                +city-list
+                            +accordion-item('Canada')
+                                +city-list
+                            +accordion-item('Europe')
+                                +city-list
+                            +accordion-item('Asia, Pacific and Middle East')
+                                +city-list
+                            +accordion-item('Australia and Oceania')
+                                +city-list
+                            +accordion-item('Latin America and Caribbean')
+                                +city-list
+                            +accordion-item('Africa')
+                                +city-list
+
 
                 +navbar-item._dropdown
                     +navbar-link-dropdown(href='#')
