--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -37,19 +37,19 @@
         display: block
         min-width: 149px
 
-        &_dropdown:hover
+        &_dropdown:hover, &_active, &_active:hover
             & ^[0]__link
-              background-color: darkGreyColor
+                background-color: darkGreyColor
 
             & ^[0]__heading
-              color: #fff
+                color: #fff
 
             & > ^[0]__dropdown
                 opacity: 1
                 pointer-events: all
 
             & ^[0]__arrow
-              opacity: 1
+                opacity: 1
 
         &_flexible
             flex: 1
@@ -57,9 +57,6 @@
         +below(768px)
             min-width: initial
             flex: 1 0 60px
-
-        &_relative
-            position relative
 
         &:not(:last-child)
             border-right: 1px solid borderColor
@@ -192,3 +189,8 @@
         top 100%
         right -10px
         width 463px
+
+    &__popup-wrapper
+        position relative
+        width 100%
+        height 0
