--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -35,6 +35,9 @@
         &_grey
             background-color #212223
 
+        &_light
+            background-color: rgba(#fff, .03)
+
     &_border
         &_standart
             border-color borderColor
