--- a/markup/components/filter/filter.pug
+++ b/markup/components/filter/filter.pug
@@ -143,33 +143,154 @@ mixin filter-additional
                         +checkbox(false, 'service-for', 'gays')._black Gays
                     +col(2)
                         +checkbox(false, 'service-for', '2+')._black 2+
-            +accordion('Keywords', 'Show', 'Hide')
-                +grid
-                    +col(2)
-                        +checkbox(true, 'keywords', 'vip_companion') Vip Companion
-                    +col(2)
-                        +checkbox(true, 'keywords', 'muscular') Muscular
-                    +col(2)
-                        +checkbox(false, 'keywords', 'model_ex-model') Model/Ex-model
-                    +col(2)
-                        +checkbox(false, 'keywords', 'occasional') Occasional
-                    +col(2)
-                        +checkbox(false, 'keywords', 'super-busty') Super busty
-                    +col(2)
-                        +checkbox(false, 'keywords', 'super-booty') Super booty
-                    +col(2)
-                        +checkbox(false, 'keywords', 'petite') Petite
-                    +col(2)
-                        +checkbox(false, 'keywords', 'all-natural') All natural
-                    +col(2)
-                        +checkbox(false, 'keywords', 'college-girl') College girl
-                    +col(2)
-                        +checkbox(false, 'keywords', 'bbw') BBW
-                    +col(2)
-                        +checkbox(false, 'keywords', 'fitness-girl') Fitness girl
-                    +col(2)
-                        +checkbox(false, 'keywords', 'mature') Mature
+            +accordion.accordion_dark
+                +accordion-item('Keywords', 'Show', 'Hide')
+                    +grid
+                        +col(2)
+                            +checkbox(true, 'keywords', 'vip_companion')._black Vip Companion
+                        +col(2)
+                            +checkbox(true, 'keywords', 'muscular')._black Muscular
+                        +col(2)
+                            +checkbox(false, 'keywords', 'model_ex-model')._black Model/Ex-model
+                        +col(2)
+                            +checkbox(false, 'keywords', 'occasional')._black Occasional
+                        +col(2)
+                            +checkbox(false, 'keywords', 'super-busty')._black Super busty
+                        +col(2)
+                            +checkbox(false, 'keywords', 'super-booty')._black Super booty
+                        +col(2)
+                            +checkbox(false, 'keywords', 'petite')._black Petite
+                        +col(2)
+                            +checkbox(false, 'keywords', 'all-natural')._black All natural
+                        +col(2)
+                            +checkbox(false, 'keywords', 'college-girl')._black College girl
+                        +col(2)
+                            +checkbox(false, 'keywords', 'bbw')._black BBW
+                        +col(2)
+                            +checkbox(false, 'keywords', 'fitness-girl')._black Fitness girl
+                        +col(2)
+                            +checkbox(false, 'keywords', 'mature')._black Mature
 
+                +accordion-item('Services', 'Show', 'Hide')
+                    +grid
+                        +col(12)
+                            +e.SPAN.label._top Sex
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'classical-sex')._black Classical sex
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'sex')._black Sex
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'deep-throating')._black Deep throating
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'cum-of-face')._black Cum of face
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'anal-sex')._black Anal sex
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'bj-with-condom')._black BJ with condom
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'bj-in-your-car')._black BJ in your car
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'cum-in-mouth')._black Cum in mouth
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'lesbian-sex')._black Lesbian sex
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'cunnilingus')._black Cunnilingus
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'sex-toys')._black Sex toys
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'classical-sex')._black Classical sex
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'couples')._black Couples
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'bj-without-condoms')._black BJ without condoms
+                        +col(3)
+                            +checkbox(false, 'services-sex', 'cum-on-breast')._black Cum on breast
+                    +grid
+                        +col(12)
+                            +e.SPAN.label._top Massage
+                        +col(3)
+                            +checkbox(false, 'services-message', 'classic')._black Classic
+                        +col(3)
+                            +checkbox(false, 'services-message', 'relaxing')._black Relaxing
+                        +col(3)
+                            +checkbox(false, 'services-message', 'urological')._black Urological
+                        +col(3)
+                            +checkbox(false, 'services-message', 'erotic')._black Erotic
+                        +col(3)
+                            +checkbox(false, 'services-message', 'professional')._black Professional
+                        +col(3)
+                            +checkbox(false, 'services-message', 'thai')._black Thai
+                        +col(3)
+                            +checkbox(false, 'services-message', 'specific-area')._black Specific area
+                        +col(3)
+                            +checkbox(false, 'services-message', 'sakura')._black Sakura
+                    +grid
+                        +col(12)
+                            +e.SPAN.label._top Striptease
+                        +col(3)
+                            +checkbox(false, 'services-striptease', 'professional')._black professional
+                        +col(3)
+                            +checkbox(false, 'services-striptease', 'amateur')._black amateur
+                        +col(3)
+                            +checkbox(false, 'services-striptease', 'hardcore-lesbi-show')._black Hardcore Lesbi-show
+                        +col(3)
+                            +checkbox(false, 'services-striptease', 'soft-lesbi-show')._black Soft Lesbi-show
+
+                    +grid
+                        +col(12)
+                            +e.SPAN.label._top BDSM
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'bandage')._black Bandage
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'games')._black Games
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'getting-whipped')._black Getting Whipped
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'fetish')._black Fetish
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'mistress')._black Mistress
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'softcore-dominaton')._black Softcore dominaton
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'slave')._black Slave
+                        +col(3)
+                            +checkbox(false, 'services-bdsm', 'trampling')._black Trampling
+
+                    +grid
+                        +col(12)
+                            +e.SPAN.label._top Extreme
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'strapon')._black Strapon
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'golden-rain-give')._black Golden rain, give
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'copro')._black copro
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'fisting')._black Fisting
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'anilingus')._black Anilingus
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'golden-rain-receive')._black Golden rain, receive
+                        +col(3)
+                            +checkbox(false, 'services-extreme', 'anal-fisting')._black Anal fisting
+
+                    +grid
+                        +col(12)
+                            +e.SPAN.label._top Other
+                        +col(3)
+                            +checkbox(false, 'services-other', 'role-play')._black Role play
+                        +col(3)
+                            +checkbox(false, 'services-other', 'photo-video')._black Photo/Video
+                        +col(3)
+                            +checkbox(false, 'services-other', 'escort')._black Escort
+
+            +grid
+                +col(3)
+                    +button._uppercase._bg_light._color_main Apply <span>(18021)</span>
+                +col(3)
+                    +button._uppercase._bg_darkGrey._color_white._border_grey Reset options
+                +col(3).grid__col_push_right
+                    +button._uppercase._bg_darkGrey._color_white._border_grey  – hide more options
 mixin filter-extended
     +b.FORM(method='POST' action='#').filter._extended&attributes(attributes)
         +container
