--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -48,14 +48,24 @@
         display: flex
 
 .filter-additional
-    display: block
+    display: none
     box-shadow 0 10px 40px rgba(29, 29, 29, .1)
     background-color darkGreyColor
     padding: 15px 0
 
+    .accordion__content .grid:first-child
+        margin-top: -24px
+
     .grid
         padding-top: 0
         padding-bottom: 0
+
+        &:not(:first-child)
+            border: 0
+            margin-top: 12px
+
+        &__col_twelve
+            margin-bottom: 12px
 
     &__row
         padding: 43px 0
