--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -3,8 +3,14 @@
     padding: 24px 0
     border-bottom: 1px solid borderColor
 
+    &_additional
+
+        & ^[0]__hide-additional
+            opacity: 0
+            pointer-events: none
+
     &_extended
-        display: block
+        display: none
         padding: 0
         border-bottom: 0
         background-color: #fff
