--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -5,6 +5,13 @@
     position: relative
     z-index: 200
 
+    .filter_extended
+        position: absolute
+        top: 100%
+        left: 0
+        order: 3
+        width: 100%
+
     .show-fixed
         display: none
 
