--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -10,7 +10,9 @@
             pointer-events: none
 
     &_extended
-        display: none
+        align-self: flex-start
+        display: block
+        width: 100%
         padding: 0
         border-bottom: 0
         background-color: #fff
