--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -9,7 +9,6 @@ include ../accordion/accordion
 include ../button/button
 include ../city-list/city-list
 include ../selectbox/selectbox
-include ../filter/filter
 
 mixin header()
     +b.HEADER.header&attributes(attributes)
@@ -61,7 +60,7 @@ mixin header()
                             +accordion-item('Africa')
                                 +city-list
                 +navbar-item._filter.show-fixed
-                    +navbar-link(href='#')._row._has_badge.js-toggle-extended-filter
+                    +navbar-link(href='#' data-popup-id='#filter-extended' data-action='toggle')._row._has_badge.js-toggle-popup
                         +navbar-badge._top_right 2
                         +navbar-col
                             +navbar-heading Filter
@@ -162,7 +161,7 @@ mixin header()
                     +navbar-link(href='#')._active-style_main.js-header-toggle-search-bar
                         != pugHelpers.Icon.call(locals, {iconName: 'search', className: 'navbar__icon_search', iconWidth: '14', iconHeight: '14'})
                 +navbar-item
-                    +navbar-link(href='#').js-toggle-extended-filter
+                    +navbar-link(href='#' data-popup-id='#filter-extended' data-action='toggle').js-toggle-popup
                         != pugHelpers.Icon.call(locals, {iconName: 'filter-button', className: 'navbar__icon_filter', iconWidth: '19', iconHeight: '12'})
                 +navbar-item
                     +navbar-link(href='#')
@@ -180,4 +179,3 @@ mixin header()
             +search-bar._extended
 
         +photo-tape
-        +filter-extended
