--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -5,13 +5,6 @@
     position: relative
     z-index: 200
 
-    .filter_extended
-        position: absolute
-        top: 100%
-        left: 0
-        order: 3
-        width: 100%
-
     .show-fixed
         display: none
 
@@ -24,7 +17,9 @@
         top: 0
         left: 0
         transform: translate3d(0, 0, 0)
-        box-shadow: 0 10px 40px rgba(29, 29, 29, .1)
+
+        &:not(.no-shadow)
+            box-shadow: 0 10px 40px rgba(29, 29, 29, .1)
 
         .show-fixed
             display: block
