--- a/markup/pages/model-list.pug
+++ b/markup/pages/model-list.pug
@@ -3,6 +3,7 @@ include ../components/header/header
 include ../components/footer/footer
 include ../components/model-list/model-list
 include ../components/arrow-up/arrow-up
+include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 
 block header
@@ -14,6 +15,7 @@ block content
 
 block popups
     +popup-welcome
+    +filter-extended
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
