popup welcome logic

--- a/markup/components/popup-welcome/popup-welcome.pug
+++ b/markup/components/popup-welcome/popup-welcome.pug
@@ -14,6 +14,6 @@ mixin popup-welcome()
                     +count-info('Independent', '41908').__count-info
                     +count-info('Agency’s', '2154').__count-info
                 +e.buttons
-                    +button()(data-popup-id='#popup-welcome' data-action='hide')._uppercase._bg_grey._color_main.__button.js-toggle-popup yes, I have 18
-                    +button()._uppercase._border_grey.__button no, I don’t have 18
+                    +button()._uppercase._bg_grey._color_main.__button.js-popup-welcome-accept yes, I have 18
+                    +button()(data-popup-id='#popup-welcome' data-action='hide')._uppercase._border_grey.__button.js-toggle-popup no, I don’t have 18
                     +e.A(href='#').terms Terms of use
