--- a/markup/components/city-list/city-list.pug
+++ b/markup/components/city-list/city-list.pug
@@ -1,8 +1,8 @@
 mixin city-list()
-    +b.city-list&attributes(attributes)
+    +b.FORM(method='POST' action='#').city-list&attributes(attributes)
         +cities-container
             +cities-all
-        +button._uppercase._bg_grey._color_main.__button apply (18021)
+        +button('button')._uppercase._bg_grey._color_main.__button apply (18021)
 
 mixin city(title, count)
     +e.LABEL.item&attributes(attributes)
