--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -37,7 +37,7 @@
         display: block
         min-width: 149px
 
-        &_dropdown:hover, &_active, &_active:hover
+        &_dropdown:hover, &.active, &_active, &_active:hover
             & ^[0]__link
                 background-color: darkGreyColor
 
