--- a/markup/components/popup/popup.pug
+++ b/markup/components/popup/popup.pug
@@ -39,4 +39,5 @@
 mixin popup()
     .popup&attributes(attributes)
         .popup__wrapper
-            block
+            .popup__content
+                block
