--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -37,28 +37,13 @@ mixin header()
                 +navbar-item._flexible
                     +search-bar
 
-                +navbar-item._city
+                +navbar-item(data-popup-id='#select-city' data-action='toggle')._city._dropdown.js-toggle-popup
                     +navbar-link-dropdown(href='#')
                         +navbar-heading City
                         +navbar-description Los Angeles
                     +navbar-popup-wrapper
                         +city-suggest.__suggest
-                    +navbar-dropdown
-                        +accordion(true).accordion_dark
-                            +accordion-item('United States')
-                                +city-list
-                            +accordion-item('Canada')
-                                +city-list
-                            +accordion-item('Europe')
-                                +city-list
-                            +accordion-item('Asia, Pacific and Middle East')
-                                +city-list
-                            +accordion-item('Australia and Oceania')
-                                +city-list
-                            +accordion-item('Latin America and Caribbean')
-                                +city-list
-                            +accordion-item('Africa')
-                                +city-list
+
                 +navbar-item._filter.show-fixed
                     +navbar-link(href='#' data-popup-id='#filter-extended' data-action='toggle')._row._has_badge.js-toggle-popup
                         +navbar-badge._top_right 2
