--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -18,5 +18,9 @@
         align-items: center
         width: 100%
         height: 100vh
+
+    &__content
+        width: 100%
+        height: 100%
         overflow-y: auto
         overflow-x: hidden
