--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -6,6 +6,7 @@ include ../components/demo/demo
 include ../components/container/container
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
+include ../components/select-city-popup/select-city-popup
 
 block header
     +header
@@ -21,6 +22,7 @@ block content
 block popups
     +popup-welcome
     +filter-extended
+    +select-city-popup
 
 block footer
     +footer
