--- a/markup/pages/model-list-no-models.pug
+++ b/markup/pages/model-list-no-models.pug
@@ -5,6 +5,7 @@ include ../components/model-list/model-list-no-models
 include ../components/image-bg/image-bg
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
+include ../components/select-city-popup/select-city-popup
 
 block header
     +header
@@ -15,6 +16,7 @@ block content
 block popups
     +popup-welcome
     +filter-extended
+    +select-city-popup
 
 block footer
     +footer
