--- a/markup/pages/model-list.pug
+++ b/markup/pages/model-list.pug
@@ -5,6 +5,7 @@ include ../components/model-list/model-list
 include ../components/arrow-up/arrow-up
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
+include ../components/select-city-popup/select-city-popup
 
 block header
     +header
@@ -16,6 +17,7 @@ block content
 block popups
     +popup-welcome
     +filter-extended
+    +select-city-popup
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
